# ai_pod_cli

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
ai_pod_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  config_store.py  container.py  context.py  entities.py  entry_generator.py  runner.py  security.py
ai_pod_cli/commands/: add.py  build.py  compose.py  create.py  entry.py  env.py  init.py  pod.py
modules/: __init__.py  requirements.txt
