[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AIPodCli"
version = "0.3.0"
description = "AI-native application framework where AI builds software and a DI runtime executes it"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "openai",
    "injector",
    "python-dotenv",
    "tomlkit",
]

[project.scripts]
aipod = "ai_pod_cli.cli:main"

[tool.setuptools.packages.find]
include = ["ai_pod_cli*"]
